Fix chat not showing on join
Opacity was set to zero percent and never changed.  This removes the
opacity CSS value.  It looks like opacity was used at one point, but
never fully removed.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -281,7 +281,6 @@ input[type=text] {
 #messages {
     min-height: 15em;
     color: var(--var-message-color);
-    opacity: 0%;
     overflow-y: scroll;
     border: var(--var-border);
 }
